--- a/GitHubExtension/packages.config
+++ b/GitHubExtension/packages.config
@@ -8,7 +8,12 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
+  <package id="Tvl.VisualStudio.OutputWindow" version="2.0.1" targetFramework="net45" />
   <package id="Tvl.VisualStudio.OutputWindow.Interfaces" version="2.0.0" targetFramework="net45" />
+  <package id="VSSDK.ComponentModelHost" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.ComponentModelHost.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
