--- a/GitHubExtension/GitHubExtension.csproj
+++ b/GitHubExtension/GitHubExtension.csproj
@@ -170,7 +170,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Tvl.VisualStudio.OutputWindow.Interfaces">
       <HintPath>..\packages\Tvl.VisualStudio.OutputWindow.Interfaces.2.0.0\lib\net40\Tvl.VisualStudio.OutputWindow.Interfaces.dll</HintPath>
-      <Private>False</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
